# zarr_implementations

./: Makefile  environment.yml  environment_download.yml
.github/workflows/: download.yml
read_from_s3/: download_from_s3.sh
read_from_s3/go/: download.go
read_from_s3/rust/: Cargo.toml
read_from_s3/rust/src/: download.rs  main.rs
